src/objects/Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Currency__c</fullName>
        <label>To Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>forList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>forList</label>
        <type>Checkbox</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Base_Currency__c</columns>
        <columns>Rate__c</columns>
        <columns>To_Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exchange Rate	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>